선형 순차 리스트

--- a/Data.vcxproj
+++ b/Data.vcxproj
@@ -127,7 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ex3_4.c" />
+    <ClCompile Include="listS.c" />
     <ClCompile Include="test1.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="listS.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
