--- a/Data.vcxproj.filters
+++ b/Data.vcxproj.filters
@@ -13,10 +13,27 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\List">
+      <UniqueIdentifier>{b7447ae6-ce75-4bb5-ad71-5eb45595305f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="헤더 파일\List">
+      <UniqueIdentifier>{2d3ab59a-3fc2-4845-bcbf-99bd9a41075c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="listS.c">
+      <Filter>소스 파일\List</Filter>
+    </ClCompile>
+    <ClCompile Include="ex3_4.c">
+      <Filter>소스 파일\List</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="listS.h">
+      <Filter>헤더 파일\List</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
