단순 연결 리스트 삭제,탐색,역순 추가

--- a/Data.vcxproj
+++ b/Data.vcxproj
@@ -136,15 +136,24 @@
     <ClCompile Include="ex3_6.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="ex4_1.c" />
-    <ClCompile Include="InsertLinkedList.c" />
+    <ClCompile Include="ex4_1.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="ex4_2.c" />
+    <ClCompile Include="InsertLinkedList.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="LinkedList.c" />
     <ClCompile Include="listS.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="addPoly.h" />
-    <ClInclude Include="InsertLinkedList.h" />
+    <ClInclude Include="InsertLinkedList.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="LinkedList.h" />
     <ClInclude Include="listS.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
