--- a/Data.vcxproj.filters
+++ b/Data.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="ex4_1.c">
       <Filter>소스 파일\LinkedList</Filter>
     </ClCompile>
+    <ClCompile Include="ex4_2.c">
+      <Filter>소스 파일\LinkedList</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkedList.c">
+      <Filter>소스 파일\LinkedList</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="listS.h">
@@ -54,6 +60,9 @@
       <Filter>헤더 파일\List</Filter>
     </ClInclude>
     <ClInclude Include="InsertLinkedList.h">
+      <Filter>헤더 파일\LinkedList</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList.h">
       <Filter>헤더 파일\LinkedList</Filter>
     </ClInclude>
   </ItemGroup>
