--- a/Data.vcxproj.filters
+++ b/Data.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClCompile Include="ex4_4.c">
       <Filter>소스 파일\DoubleLinkedList</Filter>
     </ClCompile>
+    <ClCompile Include="ex4_5.c">
+      <Filter>소스 파일\LinkedList</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkedPoly.c">
+      <Filter>소스 파일\LinkedList</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="listS.h">
@@ -94,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="DoubleLinkedList.h">
       <Filter>헤더 파일\DoubleLinkedList</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedPoly.h">
+      <Filter>헤더 파일\LinkedList</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
