--- a/Data.vcxproj.filters
+++ b/Data.vcxproj.filters
@@ -78,12 +78,6 @@
     <ClCompile Include="InsertLinkedList.c">
       <Filter>소스 파일\LinkedList</Filter>
     </ClCompile>
-    <ClCompile Include="ex4_1.c">
-      <Filter>소스 파일\LinkedList</Filter>
-    </ClCompile>
-    <ClCompile Include="ex4_2.c">
-      <Filter>소스 파일\LinkedList</Filter>
-    </ClCompile>
     <ClCompile Include="LinkedList.c">
       <Filter>소스 파일\LinkedList</Filter>
     </ClCompile>
@@ -111,16 +105,7 @@
     <ClCompile Include="stackS.c">
       <Filter>소스 파일\Stack\arr</Filter>
     </ClCompile>
-    <ClCompile Include="stackL.c">
-      <Filter>소스 파일\Stack\linked</Filter>
-    </ClCompile>
     <ClCompile Include="ex5_2.c">
-      <Filter>소스 파일\Stack\linked</Filter>
-    </ClCompile>
-    <ClCompile Include="testPair.c">
-      <Filter>소스 파일\Stack\linked</Filter>
-    </ClCompile>
-    <ClCompile Include="ex5_3.c">
       <Filter>소스 파일\Stack\linked</Filter>
     </ClCompile>
     <ClCompile Include="evalPostfix.h">
@@ -133,10 +118,19 @@
       <Filter>소스 파일\Stack\linked</Filter>
     </ClCompile>
     <ClCompile Include="queueS.c">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\Queue\arr</Filter>
     </ClCompile>
     <ClCompile Include="ex6_1.c">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\Queue\arr</Filter>
+    </ClCompile>
+    <ClCompile Include="stackL.c">
+      <Filter>소스 파일\Stack\linked</Filter>
+    </ClCompile>
+    <ClCompile Include="testPair.c">
+      <Filter>소스 파일\Stack\linked</Filter>
+    </ClCompile>
+    <ClCompile Include="ex5_3.c">
+      <Filter>소스 파일\Stack\linked</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -164,14 +158,14 @@
     <ClInclude Include="stackS.h">
       <Filter>헤더 파일\Stack</Filter>
     </ClInclude>
+    <ClInclude Include="queueS.h">
+      <Filter>헤더 파일\Queue\arr</Filter>
+    </ClInclude>
     <ClInclude Include="stackL.h">
       <Filter>헤더 파일\Stack</Filter>
     </ClInclude>
     <ClInclude Include="testPair.h">
       <Filter>헤더 파일\Stack</Filter>
-    </ClInclude>
-    <ClInclude Include="queueS.h">
-      <Filter>헤더 파일\Queue\arr</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
