--- a/Data.vcxproj.filters
+++ b/Data.vcxproj.filters
@@ -63,109 +63,88 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="listS.c">
+    <ClCompile Include="arrlist\addPoly.c">
       <Filter>소스 파일\List</Filter>
     </ClCompile>
-    <ClCompile Include="ex3_4.c">
-      <Filter>소스 파일\List</Filter>
-    </ClCompile>
-    <ClCompile Include="ex3_6.c">
-      <Filter>소스 파일\List</Filter>
-    </ClCompile>
-    <ClCompile Include="addPoly.c">
-      <Filter>소스 파일\List</Filter>
-    </ClCompile>
-    <ClCompile Include="InsertLinkedList.c">
+    <ClCompile Include="Linkedlist\InsertLinkedList.c">
       <Filter>소스 파일\LinkedList</Filter>
     </ClCompile>
-    <ClCompile Include="LinkedList.c">
+    <ClCompile Include="Linkedlist\LinkedList.c">
       <Filter>소스 파일\LinkedList</Filter>
     </ClCompile>
-    <ClCompile Include="CircularLinkedList.c">
+    <ClCompile Include="CircularLinkedlist\CircularLinkedList.c">
       <Filter>소스 파일\CircularLinkedList</Filter>
     </ClCompile>
-    <ClCompile Include="4_3.c">
+    <ClCompile Include="CircularLinkedlist\4_3.c">
       <Filter>소스 파일\CircularLinkedList</Filter>
     </ClCompile>
-    <ClCompile Include="DoubleLinkedList.c">
-      <Filter>소스 파일\DoubleLinkedList</Filter>
-    </ClCompile>
-    <ClCompile Include="ex4_4.c">
-      <Filter>소스 파일\DoubleLinkedList</Filter>
-    </ClCompile>
-    <ClCompile Include="ex4_5.c">
+    <ClCompile Include="Linkedlist\ex4_5.c">
       <Filter>소스 파일\LinkedList</Filter>
     </ClCompile>
-    <ClCompile Include="LinkedPoly.c">
+    <ClCompile Include="Linkedlist\LinkedPoly.c">
       <Filter>소스 파일\LinkedList</Filter>
     </ClCompile>
-    <ClCompile Include="ex5_1.c">
+    <ClCompile Include="stack\arr\ex5_1.c">
       <Filter>소스 파일\Stack\arr</Filter>
     </ClCompile>
-    <ClCompile Include="stackS.c">
+    <ClCompile Include="stack\arr\stackS.c">
       <Filter>소스 파일\Stack\arr</Filter>
     </ClCompile>
-    <ClCompile Include="ex5_2.c">
-      <Filter>소스 파일\Stack\linked</Filter>
-    </ClCompile>
-    <ClCompile Include="evalPostfix.h">
+    <ClCompile Include="stack\linked\evalPostfix.h">
       <Filter>헤더 파일\Stack</Filter>
     </ClCompile>
-    <ClCompile Include="evalPostfix.c">
+    <ClCompile Include="stack\linked\evalPostfix.c">
       <Filter>소스 파일\Stack\linked</Filter>
     </ClCompile>
-    <ClCompile Include="ex5_4.c">
+    <ClCompile Include="stack\linked\ex5_4.c">
       <Filter>소스 파일\Stack\linked</Filter>
     </ClCompile>
-    <ClCompile Include="queueS.c">
+    <ClCompile Include="queue\queueS.c">
       <Filter>소스 파일\Queue\arr</Filter>
     </ClCompile>
-    <ClCompile Include="ex6_1.c">
+    <ClCompile Include="queue\ex6_1.c">
       <Filter>소스 파일\Queue\arr</Filter>
     </ClCompile>
-    <ClCompile Include="stackL.c">
+    <ClCompile Include="stack\linked\stackL.c">
       <Filter>소스 파일\Stack\linked</Filter>
     </ClCompile>
-    <ClCompile Include="testPair.c">
+    <ClCompile Include="stack\linked\testPair.c">
       <Filter>소스 파일\Stack\linked</Filter>
     </ClCompile>
-    <ClCompile Include="ex5_3.c">
-      <Filter>소스 파일\Stack\linked</Filter>
+    <ClCompile Include="arrlist\ex3_6.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="arrlist\ex3_4.c">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="listS.h">
-      <Filter>헤더 파일\List</Filter>
-    </ClInclude>
-    <ClInclude Include="addPoly.h">
-      <Filter>헤더 파일\List</Filter>
-    </ClInclude>
-    <ClInclude Include="InsertLinkedList.h">
+    <ClInclude Include="Linkedlist\InsertLinkedList.h">
       <Filter>헤더 파일\LinkedList</Filter>
     </ClInclude>
-    <ClInclude Include="LinkedList.h">
+    <ClInclude Include="Linkedlist\LinkedList.h">
       <Filter>헤더 파일\LinkedList</Filter>
     </ClInclude>
-    <ClInclude Include="CircularLinkedList.h">
+    <ClInclude Include="CircularLinkedlist\CircularLinkedList.h">
       <Filter>헤더 파일\CircularLinkedList</Filter>
     </ClInclude>
-    <ClInclude Include="DoubleLinkedList.h">
-      <Filter>헤더 파일\DoubleLinkedList</Filter>
-    </ClInclude>
-    <ClInclude Include="LinkedPoly.h">
+    <ClInclude Include="Linkedlist\LinkedPoly.h">
       <Filter>헤더 파일\LinkedList</Filter>
     </ClInclude>
-    <ClInclude Include="stackS.h">
+    <ClInclude Include="stack\arr\stackS.h">
       <Filter>헤더 파일\Stack</Filter>
     </ClInclude>
-    <ClInclude Include="queueS.h">
+    <ClInclude Include="queue\queueS.h">
       <Filter>헤더 파일\Queue\arr</Filter>
     </ClInclude>
-    <ClInclude Include="stackL.h">
+    <ClInclude Include="stack\linked\stackL.h">
       <Filter>헤더 파일\Stack</Filter>
     </ClInclude>
-    <ClInclude Include="testPair.h">
+    <ClInclude Include="stack\linked\testPair.h">
       <Filter>헤더 파일\Stack</Filter>
+    </ClInclude>
+    <ClInclude Include="arrlist\addPoly.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
