--- a/Data.vcxproj.filters
+++ b/Data.vcxproj.filters
@@ -90,23 +90,8 @@
     <ClCompile Include="stack\arr\stackS.c">
       <Filter>소스 파일\Stack\arr</Filter>
     </ClCompile>
-    <ClCompile Include="stack\linked\evalPostfix.h">
-      <Filter>헤더 파일\Stack</Filter>
-    </ClCompile>
-    <ClCompile Include="stack\linked\evalPostfix.c">
-      <Filter>소스 파일\Stack\linked</Filter>
-    </ClCompile>
-    <ClCompile Include="stack\linked\ex5_4.c">
-      <Filter>소스 파일\Stack\linked</Filter>
-    </ClCompile>
-    <ClCompile Include="queue\queueS.c">
+    <ClCompile Include="queue\arr\queueS.c">
       <Filter>소스 파일\Queue\arr</Filter>
-    </ClCompile>
-    <ClCompile Include="queue\ex6_1.c">
-      <Filter>소스 파일\Queue\arr</Filter>
-    </ClCompile>
-    <ClCompile Include="stack\linked\stackL.c">
-      <Filter>소스 파일\Stack\linked</Filter>
     </ClCompile>
     <ClCompile Include="stack\linked\testPair.c">
       <Filter>소스 파일\Stack\linked</Filter>
@@ -134,11 +119,8 @@
     <ClInclude Include="stack\arr\stackS.h">
       <Filter>헤더 파일\Stack</Filter>
     </ClInclude>
-    <ClInclude Include="queue\queueS.h">
+    <ClInclude Include="queue\arr\queueS.h">
       <Filter>헤더 파일\Queue\arr</Filter>
-    </ClInclude>
-    <ClInclude Include="stack\linked\stackL.h">
-      <Filter>헤더 파일\Stack</Filter>
     </ClInclude>
     <ClInclude Include="stack\linked\testPair.h">
       <Filter>헤더 파일\Stack</Filter>
