--- a/Data.vcxproj
+++ b/Data.vcxproj
@@ -166,6 +166,8 @@
     <ClCompile Include="stack\linked\testPair.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Tree\ex7_2.c" />
+    <ClCompile Include="Tree\folderSize.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arrlist\addPoly.h">
@@ -192,6 +194,7 @@
     <ClInclude Include="stack\linked\testPair.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="Tree\folderSize.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
