--- a/Data.vcxproj.filters
+++ b/Data.vcxproj.filters
@@ -84,18 +84,6 @@
     <ClCompile Include="Linkedlist\LinkedPoly.c">
       <Filter>소스 파일\LinkedList</Filter>
     </ClCompile>
-    <ClCompile Include="stack\arr\ex5_1.c">
-      <Filter>소스 파일\Stack\arr</Filter>
-    </ClCompile>
-    <ClCompile Include="stack\arr\stackS.c">
-      <Filter>소스 파일\Stack\arr</Filter>
-    </ClCompile>
-    <ClCompile Include="queue\arr\queueS.c">
-      <Filter>소스 파일\Queue\arr</Filter>
-    </ClCompile>
-    <ClCompile Include="stack\linked\testPair.c">
-      <Filter>소스 파일\Stack\linked</Filter>
-    </ClCompile>
     <ClCompile Include="arrlist\ex3_6.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -116,16 +104,10 @@
     <ClInclude Include="Linkedlist\LinkedPoly.h">
       <Filter>헤더 파일\LinkedList</Filter>
     </ClInclude>
-    <ClInclude Include="stack\arr\stackS.h">
-      <Filter>헤더 파일\Stack</Filter>
-    </ClInclude>
-    <ClInclude Include="queue\arr\queueS.h">
-      <Filter>헤더 파일\Queue\arr</Filter>
-    </ClInclude>
-    <ClInclude Include="stack\linked\testPair.h">
-      <Filter>헤더 파일\Stack</Filter>
-    </ClInclude>
     <ClInclude Include="arrlist\addPoly.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Tree\BST\AVL\node2.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
