--- a/Data.vcxproj
+++ b/Data.vcxproj
@@ -154,6 +154,10 @@
     <ClCompile Include="Linkedlist\LinkedPoly.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Tree\BST\AVL2\avl.c" />
+    <ClCompile Include="Tree\BST\AVL2\bst2.c" />
+    <ClCompile Include="Tree\BST\AVL2\ex7_5.c" />
+    <ClCompile Include="Tree\BST\AVL2\node2.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arrlist\addPoly.h">
@@ -171,6 +175,9 @@
     <ClInclude Include="Linkedlist\LinkedPoly.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="Tree\BST\AVL2\avl.h" />
+    <ClInclude Include="Tree\BST\AVL2\bst2.h" />
+    <ClInclude Include="Tree\BST\AVL2\node2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
