--- a/Data.vcxproj.filters
+++ b/Data.vcxproj.filters
@@ -90,6 +90,18 @@
     <ClCompile Include="arrlist\ex3_4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Tree\BST\AVL2\node2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Tree\BST\AVL2\bst2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Tree\BST\AVL2\avl.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Tree\BST\AVL2\ex7_5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Linkedlist\InsertLinkedList.h">
@@ -105,6 +117,15 @@
       <Filter>헤더 파일\LinkedList</Filter>
     </ClInclude>
     <ClInclude Include="arrlist\addPoly.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Tree\BST\AVL2\node2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Tree\BST\AVL2\bst2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Tree\BST\AVL2\avl.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
