--- a/Data.vcxproj.filters
+++ b/Data.vcxproj.filters
@@ -90,10 +90,10 @@
     <ClCompile Include="arrlist\ex3_4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Tree\heap\heap.c">
+    <ClCompile Include="Graph\adjMatrix.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Tree\heap\ex7_6.c">
+    <ClCompile Include="Graph\ex8_1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -113,7 +113,7 @@
     <ClInclude Include="arrlist\addPoly.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Tree\heap\heap.h">
+    <ClInclude Include="Graph\adjMatrix.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
